--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
     "@angular/router": "~7.0.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-markdown": "^7.1.3",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "^0.13.0",
     "@angular/cli": "~7.0.3",
     "@angular/compiler-cli": "~7.0.1",
     "@angular/language-service": "~7.0.1",
-    "@types/node": "~10.12.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~10.12.1",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
